Paper specific changes • Changed from CommandExecutor to BasicCommand. • Added better tab tompletion. • Removed unnecessary use of instances. • Changed to Adventure text handling. • Added clickable arrows in limbolist. • Code cleanup. • Fixed limbolist bug where the last line appear first on the next page. • Added BStats Metrics. • Added new permission handling. • New paper-plugin.yml. • New error message in messages.yml. • Will now automatically set to SQLite if config.yml has wrong setting for SQL type. • Changed plugin update notification from SpigotMC to Modrinth. • Improved performance.